--- a/views/account/login.pug
+++ b/views/account/login.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .page-header
-    h3.center-block.text-center Login To PewTube
+    h3.center-block.text-center Login To NodeTube
   form.form-horizontal(method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
     .form-group
