--- a/views/account/newacct.pug
+++ b/views/account/newacct.pug
@@ -352,7 +352,7 @@ block content
         // Open Checkout with further options:
         handler.open({
           name: 'PewTube, Inc.',
-          description: 'One Month Of PewTube Plus',
+          description: 'One Month Of NodeTube Plus',
           amount: 495,
           allowRememberMe: false
           // email: "customer@email.com"
