--- a/views/account/signup.pug
+++ b/views/account/signup.pug
@@ -2,7 +2,7 @@ extends ../layout
 
 block content
   .page-header
-    h3 Sign Up
+    h3.center-block.text-center Sign Up
   form.form-horizontal.signup-form(id='signup-form', method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
     //.form-group
