--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -2,62 +2,15 @@ extends ../layout
 
 block content
 
+        style.
+                .ldBar {
+                        margin: 0 auto;
+                }
+
+
+        h4 NodeTube was created to allow anyone with basic technical skills to run their own media hosting platform
         br
-        h4 PewTube's mission is to allow as many creators as possible to earn a living from their work
-        br
-        h4 Development was started from scratch in early August, so the platform is still very young and improving everyday
-        br
-        h4 A FAQ will be built, but the answer to the most asked question is that the name PewTube is a nod to PewDiePie, and also a nod to church pews
-        br
-        h4 This section will be expanded in time, but please support our efforts via the following:
-        br
-        h4
-                a(href="https://paypal.me/PewTube" target="_blank") - Direct PayPal donation
-        br
-        h4
-                a(href="http://a.co/9rtd9UD" target="_blank") - Purchasing hard drives from our Amazon Wishlist
-        br
-        h4 - Via our Bitcoin address at: 1GQY32YSxyrxxEch9oufGcBNpyuKfphC5v
-        br
-        h4 - Registering as a PewTube Plus member for $4.95 a month from your account page
-        br
-        h4 Thank you for the support and let's start getting creators paid again!
-
-
-
-        //h3 This platform is for creators to upload audio and video without fear of politically correct censorship
-        //
-        //h3 The about section will be updated once PewTube 1.0 is complete
-
-        //br
-        //h3 This project is still in its early stages, here's some of the next things that will be worked on:
-        //ul
-        //        li(style="font-size:21px") Removing need for email on signup/allowing login by username
-        //        li(style="font-size:21px") Touching up comment section
-        //        li(style="font-size:21px")
-        //            strike Facebook-style react system
-        //        li(style="font-size:21px")
-        //            strike Adding search functionality
-        //        li(style="font-size:21px")
-        //            strike Ability to edit and delete uploads
-        //        li(style="font-size:21px")
-        //            strike Allow sorting of uploads by different criteria
-        //        li(style="font-size:21px")
-        //            strike Revamping media player page
-
-        //br
-        //br
-        //h3 If you would like to support the effort please donate to the -> &nbsp
-        //        a(href="https://gofundme.com/pewtube" target="_blank") GoFundMe
-        //h3 Donate to our Bitcoin address: 1CdnNzPSjccnsNvgCW51ETrBsXhkzibxwr
-
-        //h2 Thank you!
-
-
-
-
-
-
+        h4 This section will be expanded in time
 
 
 
