--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -17,8 +17,8 @@ block content
     br
     br
     br
-    h2 Welcome to PewTube:
-    h2 The most creator friendly media hosting on the internet
+    h2 Welcome to NodeTube:
+    h2 The internet's best hosting for creators and developers
     br
     br
     br
@@ -38,13 +38,13 @@ block content
       .col-sm-4
         h2 Livestreaming &nbsp
           i.fa.fa-video-camera
-        p Stream on our platform with
-        | playback support for all devices
+        p Built in livestreaming ready
+        | for developers and streamers
       .col-sm-4
-        h2 Monetization &nbsp
+        h2 Built In Monetization &nbsp
           i.fa.fa-usd
-        p Earn one-time or recurring
-        | donations directly from users
+        p Insert your Stripe key to
+        | begin collecting monthly payments
 
 
     .row
@@ -52,7 +52,7 @@ block content
         h2 #{channelAmount} Channels &nbsp
           i.fa.fa-users
         p The amount of people who have
-        | chosen PewTube for their hosting
+        | chosen this NodeTube for their hosting
       .col-sm-4
         h2 #{mediaAmount} Uploads &nbsp
           i.fa.fa-upload
