--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -7,7 +7,7 @@
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href=`/`)
-        img(src="/images/navbar.svg" style="height:85px;margin-top:-27px;")
+        h5(style="color:white;margin-right:-10px;margin-top:2px;") NodeTube
     .collapse.navbar-collapse
       ul.nav.navbar-nav.front-header
         li(class=(title == 'Home') ? 'active' : undefined)
