--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,13 +1,14 @@
 footer
   .container.text-center
-    p.pull-left © 2017 PewTube LLC, All Rights Reserved &nbsp
+    p.pull-left © 2019 NodeTube LLC, All Rights Reserved &nbsp
 
     a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://gab.ai/pewtube") Gab
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="") Twitter
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://twitter.com/pew_tube_") Twitter
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="") Facebook
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://facebook.com/pewtube") Facebook
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="") Discord
+
 
 
