bugged but better

--- a/views/upload.pug
+++ b/views/upload.pug
@@ -81,7 +81,8 @@ block content
                       button.btn.btn-success.resumable-brwoser Select File
 
 
-                  div#dropTarget(style="width:500px;height:100px;background-color:black") HEY SUP
+                  div#dropTarget(style="")
+                    img(src="/images/filedropdown.png")
                   br
                   br
                   br
