--- a/views/upload.pug
+++ b/views/upload.pug
@@ -82,7 +82,7 @@ block content
 
 
                   div#dropTarget(style="")
-                    img(src="/images/filedropdown.png")
+                    img(src="/images/filedropdown.png" style="width:350px;")
                   br
                   br
                   br
