--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -8,7 +8,10 @@ footer
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="") Facebook
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="") Discord
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://discord.gg/ejGah8H") Discord
+
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://github.com/mayeaux/nodetube") Github
+
 
 
 
