update about page

--- a/views/public/about.pug
+++ b/views/public/about.pug
@@ -10,7 +10,8 @@ block content
 
         h4 NodeTube was created to allow anyone with basic technical skills to run their own media hosting platform
         br
-        h4 This section will be expanded in time
+        h4 Please check out the Github repo for more information &nbsp
+                a(href="https://github.com/mayeaux/nodetube") Here
 
 
 
