update landing page

--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -28,6 +28,11 @@ block content
 
     .row
       .col-sm-4
+        h2 No Email Required &nbsp
+          i.fa.fa-bolt
+        p Start using the platform and
+        | uploading content without an email
+      .col-sm-4
         h2 Video, Audio, Images &nbsp
           i.fa.fa-thumbs-o-up
         p Host all forms of media on
@@ -35,11 +40,6 @@ block content
         br
         br
         br
-      .col-sm-4
-        h2 Livestreaming &nbsp
-          i.fa.fa-video-camera
-        p Built in livestreaming ready
-        | for developers and streamers
       .col-sm-4
         h2 Built In Monetization &nbsp
           i.fa.fa-usd
