fix admin reacts

--- a/views/admin/reacts.pug
+++ b/views/admin/reacts.pug
@@ -7,9 +7,10 @@ block content
             h2.view-header Reacts (Admin)
         hr
         each react in reacts
-            p Upload Title #{react.upload.title}
-            p Channel Name #{react.upload.uploader.channelName}
-            p Reacter : #{react.user.channelName}
+            p
+                a(href=`/uploads/${react.user.channelUrl}/${react.upload.uniqueTag}`) Upload Title #{react.upload.title}
+            p Channel Name #{react.upload.uploader.channelUrl}
+            p Reacter : #{react.user.channelUrl}
             p Reaction: #{react.react}
 
             br
