--- a/views/public/tos.pug
+++ b/views/public/tos.pug
@@ -25,7 +25,7 @@ block content
         p User Content that contains private information of any other person (including names, email addresses, phone numbers, Social Security numbers and financial information);
         p User Content that is libelous, defamatory, or abusive;
         p User Content that is obscene, pornographic, indecent or sexually explicit, depicts graphic, excessive or gratuitous violence;
-        p User Content that is illegal or that would encourage, solicit, foster, glorify or provide instructions for any criminal or civil offense;p
+        p User Content that is illegal or that would encourage, solicit, foster, glorify or provide instructions for any criminal or civil offense;
         p User Content that promotes terrorism or other acts of violence;
         p User Content that may infringe, misappropriate or violate any intellectual property rights, rights of privacy, rights of publicity or any other rights of others;
         p User Content that may contain viruses, corrupted data or other harmful, disruptive or destructive files or code;
