--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -41,10 +41,10 @@ block content
         br
         br
       .col-sm-4
-        h2 Built In Monetization &nbsp
-          i.fa.fa-usd
-        p Insert your Stripe key to
-        | begin collecting monthly payments
+        h2 100% Open Source &nbsp
+          i.fa.fa-space-shuttle
+        p Fork your own copy of NodeTube and
+        | have your instance up in minutes
 
 
     .row
