--- a/views/public/home.pug
+++ b/views/public/home.pug
@@ -43,7 +43,7 @@ block content
       .col-sm-4
         h2 100% Open Source &nbsp
           i.fa.fa-space-shuttle
-        p Fork your own copy of NodeTube and
+        p Clone your own copy of NodeTube and
         | have your instance up in minutes
 
 
