--- a/views/mediaPlayerPartials/creditFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/creditFunctionalityJs.pug
@@ -25,7 +25,7 @@ if user
         });
       }
 
-      console.log(amountOfCreditPurchased);
+      //      console.log(amountOfCreditPurchased);
 
       // inputOptions can be an object or Promise
       var inputOptions = new Promise(function (resolve) {
