--- a/views/mediaPlayerPartials/subscribeFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/subscribeFunctionalityJs.pug
@@ -5,7 +5,7 @@ script.
   var alreadySubbed = #{alreadySubbed}
   var mediaUniqueTag = '#{upload.uniqueTag}'
 
-  console.log(alreadySubbed + ' already subbed');
+  //  console.log(alreadySubbed + ' already subbed');
 
   $('.subscribe').on('touchstart click', function (e) {
 
