fix admin uploads

--- a/views/admin/uploads.pug
+++ b/views/admin/uploads.pug
@@ -27,7 +27,7 @@ block content
                             // capitalize media type
                             div.uploaded-by #{upload.fileType.charAt(0).toUpperCase() + upload.fileType.slice(1)} uploaded by
                                 a(href=`/user/${upload.uploader.channelUrl}`)
-                                    p(style="font-size:16px") #{upload.uploader.channelName}
+                                    p(style="font-size:16px") #{upload.uploader.channelUrl}
 
                                 p Visibility: #{upload.visibility}
 
