--- a/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
+++ b/views/mediaPlayerPartials/plyrAndAutoplayFunctionalityJs.pug
@@ -41,6 +41,7 @@ script.
   var plyr_options = {
     autoplay: autoplay,
     clickToPlay: true,
+    controlshidden: true,
     controls: ['mute', 'progress', 'play', 'fullscreen', 'volume', 'play-large', 'current-time']
   };
 
