--- a/views/layout.pug
+++ b/views/layout.pug
@@ -52,7 +52,7 @@ html
     //layout.pug
     include partials/header
 
-    .container
+    .container-fluid(style="padding-right: 0; padding-left: 0;")
       include partials/flash
       block content
 
