--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -4,7 +4,7 @@ footer
 
     a.pull-left(style="color:#aaa;margin-right:10px;" href="/termsofservice") Terms Of Service
 
-    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://github.com/mayeaux/nodetube") Github
+    a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://github.com/mayeaux/nodetube") GitHub
 
     a.pull-left(style="color:#aaa;margin-right:10px;text-decoration:underline;" href="https://discord.gg/ejGah8H") Discord
 
