update frontend copy

--- a/views/media.pug
+++ b/views/media.pug
@@ -204,7 +204,7 @@ block content
                     img(src='/images/facebook-share.jpg', width='100', height='30', alt='Share on Twitter')
                 a(href=`https://twitter.com/share?url=${url}` target="_blank")
                     img(src='/images/twitter-share.jpg', width='100', height='30', alt='Share on Twitter')
-                a(href=`mailto:?subject=Check out this ${upload.fileType}&body=Check out this ${upload.fileType} on PewTube: ${url}`, title='Share by Email')
+                a(href=`mailto:?subject=Check out this ${upload.fileType}&body=Check out this ${upload.fileType} on NodeTube: ${url}`, title='Share by Email')
                     img(src='/images/email-share.jpg')
 
             br
